css/app.css
html, body{
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    background: #1B1B1B;
    display: block;
    overflow-x: hidden;
}

#main-content {
    height: 100%;
    width: 100%;
    overflow: hidden;
    maring: 0 0 0 0;
    padding: 0 0 0 0;
}

.container {
    transition: opacity 1s ease-out;
}

#close-btn {
    padding-top: 40px;
    padding-right: 40px;
    float: right;
    color: white;
}

#btn {
    background-color: transparent;
    margin-top: 40px;
    color: white;
    border: none;
}

#btn p {
    font-family: 'Open Sans', serif, times;
    font-weight: bold;
    font-size: 1.5em;
    display: inline;
    margin-top: -10px;
    margin-right: 10px;
}

#btn:hover {
    background-color: transparent;
    transition: opacity .5s;
    opacity: .75;
    border: none;
}

#btn:active {
    background-color: transparent;
    border: none;
}

#btn:focus {
    outline: 0;
}

#nav-logo:hover {
    transition: opacity .5s;
    opacity: .75;
}

#nav-logo {
    height: 100px;
    width: auto;
}

.navbar.transparent {
    margin-left: 45px;
    margin-right: 45px;
    margin-top: .25em;
    border-width: 0px;
    -webkit-box-shadow: 0px 0px;
    box-shadow: 0px 0px;
    background-color: rgba(0,0,0,0.0);
    background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
    background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
    background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
}

.bottom-container .row {
    display: block;
    color: #818181;
    font-family: 'Open Sans';
    vertical-align: baseline;
}

.bottom-container {
    width :50%;
}

.fade-out {
    transition: 1s;
}

#top {
    background: url(../img/src_worship_bg.jpg) no-repeat center center / cover fixed;
    height: 100%;
    width: 100%;
    transition: .7s;
    z-index: 1001;
}

.menu-container {
    float: left;
    color: white;
    padding-top: 40px;
    padding-left: 10px;
    transition: .7s;
}

#menu-list {
    list-style-type: none;
    font-family: 'Open Sans';
    font-variant: small-caps;
    font-size: 20px;
    line-height: 45px;
    margin: 0 0 0 0;
}

#menu-list i {
    margin-right: 10px;
}

#menu-list li a:link {
    text-decoration: none;
    color: white;
}

#menu-list li a:visited {
    text-decoration: none;
    color: white;
}

#menu-list li:hover {
    background-color: transparent;
    text-decoration: none;
    transition: opacity .5s;
    opacity: .75;
    border: none;
}

#menu-list li:active {
    background-color: transparent;
    border: none;
}

#menu-list li:focus {
    outline: 0;
}

#menu-list li:hover {
    transition: opacity .5s;
    opacity: .75;
}

#right {
    background: #262626;
    position: absolute;
    display: none;
    width: 360px;
    height: 100%;
    margin: 0 0 0 0;
    transform: translate3d(100vw, 0, 0) translateX(-360px);
    -webkit-transform: translate3d(100vw, 0, 0) translateX(-360px);
    transition: .7s;
}

#bottom {
    overflow: hidden;
    background: #262626;
    width: 100%;
    height: 400px;
    padding-top: 15px;
    z-index: 1;
    border-style: solid;
    border-top-color: #ffffff;
    border-left: none;
    border-right: none;
    border-bottom: none;
    transition: .7s;
}

#footer {
    background: #1B1B1B;
    text-align: center;
    width: 100%;
    height: auto;
    z-index: 10;
    transition: .7s;
}

#footer p {
    padding-top: 20px;
    padding-bottom: 20px;
    color: #818181;
    font-family: 'Open Sans';
    font-size: 12px;
    line-height: 22px;
    margin: 0 0 0 0;
}

#footer p a:link {
    text-decoration: none;
    color: #e1e1e1;
    cursor: pointer;
}

@media (max-width: 650px) {
    #right {
        background: #262626;
        position: absolute;
        display: none;
        width: 260px;
        height: 100%;
        transform: translate3d(100vw, 0, 0) translateX(-260px);
        -webkit-transform: translate3d(100vw, 0, 0) translateX(-260px);
        transition: .7s;
        maring: 0 0 0 0;
    }


    .menu-container {
        float: left;
        color: white;
        padding-top: 0px;
        padding-left: 0px;
        transition: .7s;
        transform: scale(.7, .7);
        -webkit-transform: scale(.7, .7);
    }

    #menu-list {
        list-style-type: none;
        font-family: 'Open Sans';
        font-variant: small-caps;
        font-size: 20px;
        line-height: 45px;
    }

    #close-btn {
        padding-right: 10px;
    }

    .menu-container {

    }
}

@media(min-width: 768px) {
    .navbar-header {
        float: none;
    }

    .navbar-toggle {
        display: block;
    }

    .navbar-collapse.collapse {
        display: none !important;
    }
}

.row {
    margin-top: 40px;
}

.row li {
    line-height: 22px;
    padding-top: 10px;
}

